added properties for the ramen image

--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-.pasta-image {
+#pasta-image {
     border-radius: 20px;
     height: 200px;
 }
+#ramen-broccoli-img {
+    border-radius: 20px;
+    height: 200px;
+}
+
 a {
     display: block;
 }
